# PhysUnits-CT-Cpp11

./: .gitignore  .travis.yml  CMakeLists.txt  License.orig.txt  README.md  Readme.orig.txt  Readme.txt  ReleaseNotes.txt
doc/original/: quantity.html  rationale.html  weblinks.html
phys/units/: io.hpp  io_output.hpp  io_output_eng.hpp  io_symbols.hpp  other_units.hpp  physical_constants.hpp  quantity.hpp  quantity_io.hpp  quantity_io_ampere.hpp  quantity_io_becquerel.hpp  quantity_io_candela.hpp  quantity_io_celsius.hpp  quantity_io_coulomb.hpp  quantity_io_dimensionless.hpp  quantity_io_engineering.hpp  quantity_io_farad.hpp  quantity_io_gray.hpp  quantity_io_henry.hpp  quantity_io_hertz.hpp  quantity_io_joule.hpp  quantity_io_kelvin.hpp  quantity_io_kilogram.hpp  quantity_io_lumen.hpp  quantity_io_lux.hpp  quantity_io_meter.hpp  quantity_io_mole.hpp  quantity_io_newton.hpp  quantity_io_ohm.hpp  quantity_io_pascal.hpp  quantity_io_radian.hpp  quantity_io_second.hpp  quantity_io_siemens.hpp  quantity_io_sievert.hpp  quantity_io_speed.hpp  quantity_io_steradian.hpp  quantity_io_symbols.hpp  quantity_io_tesla.hpp  quantity_io_volt.hpp  quantity_io_watt.hpp  quantity_io_weber.hpp
projects/CodeBlocks/: phys-units.cbp  phys-units.workspace
projects/Doxygen/: Doxyfile  Quantity-Footer.html  Quantity-Style.css  Quantity.txt
projects/Doxygen/examples/: Makefile  base.cpp  base.txt  engineering.cpp  engineering.txt  hello.cpp  work.cpp  work.txt
projects/Test/: hamlest.hpp  test_quantity.cpp  test_quantity_io.cpp  test_util.hpp
projects/Time/: time_performance.cpp
(+8 files in other folders)
